# manipulate-lib

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: api.rs  lib.rs
src/img/: assets.rs  convert.rs  locate.rs  mod.rs  tests.rs  utils.rs
test_assets/: test.afb
